src/objects/Apttus_Config2__SmartSearchActivityHistory__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StatusCode__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Smart Search Activity History</label>
    <nameField>
        <label>Smart Search Activity History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smart Search Activity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>